third_party/move/move-compiler-v2/tests/checking/typing/if_mismatched_branches.exp

Diagnostics:
error: expected expression with no value but found `integer`
  ┌─ tests/checking/typing/if_mismatched_branches.move:3:9
  │
3 │         if (cond) () else 0;
  │         ^^^^^^^^^^^^^^^^^^^

error: expected expression with no value but found `integer`
  ┌─ tests/checking/typing/if_mismatched_branches.move:4:9
  │
4 │         if (cond) 0 else ();
  │         ^^^^^^^^^^^^^^^^^^^

error: expected `address` but found a value of type `integer`
  ┌─ tests/checking/typing/if_mismatched_branches.move:8:9
  │
8 │         if (cond) @0x0 else 0;
  │         ^^^^^^^^^^^^^^^^^^^^^

error: expected `bool` but found a value of type `integer`
  ┌─ tests/checking/typing/if_mismatched_branches.move:9:9
  │
9 │         if (cond) 0 else false;
  │         ^^^^^^^^^^^^^^^^^^^^^^

error: expected `(integer, integer)` but found a value of type `(integer, bool)`
   ┌─ tests/checking/typing/if_mismatched_branches.move:13:9
   │
13 │         if (cond) (0, false) else (1, 1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected `(bool, bool)` but found a value of type `(integer, bool)`
   ┌─ tests/checking/typing/if_mismatched_branches.move:14:9
   │
14 │         if (cond) (0, false) else (false, false);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected `(bool, address)` but found a value of type `(integer, bool)`
   ┌─ tests/checking/typing/if_mismatched_branches.move:15:9
   │
15 │         if (cond) (0, false) else (true, @0x0);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected 2 items but found 3
   ┌─ tests/checking/typing/if_mismatched_branches.move:19:9
   │
19 │         if (cond) (0, false, 0) else (0, false);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: expected 3 items but found 2
   ┌─ tests/checking/typing/if_mismatched_branches.move:20:9
   │
20 │         if (cond) (0, false) else (0, false, 0);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
